--- a/lesson_0_of_python_tutorial_for_ophthalmologist.html
+++ b/lesson_0_of_python_tutorial_for_ophthalmologist.html
@@ -11788,6 +11788,21 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="&#20026;&#20160;&#20040;&#25105;&#35201;&#20889;&#36825;&#20010;&#25945;&#31243;">&#20026;&#20160;&#20040;&#25105;&#35201;&#20889;&#36825;&#20010;&#25945;&#31243;<a class="anchor-link" href="#&#20026;&#20160;&#20040;&#25105;&#35201;&#20889;&#36825;&#20010;&#25945;&#31243;">&#182;</a></h1><p>因为写教程, 教会其他人, 是学习的一部分, 也是学习过程中最为重要的一部分.</p>
+<p>不论是学习编程还是学习看病还是学习做手术都是这样. 作为眼科医生, 回忆一下你在住院医阶段记得最清楚的几个疾病, 是不是你被要求在查房时讲解的哪些, 印象最深的病人, 是不是你刚开始管病人时被问住的哪些.</p>
+<p>只有教会了其他人, 学习的过程才算是完整的.</p>
+<p>我现在正在学习python, 进一步我还在深入学习"深度学习", 还打算使用python和深度学习技术做很多有意思的东西. 为了自己的学习, 也为了让大家也能体会到这些乐趣, 我开始写这个教程.</p>
+<h2 id="&#26412;&#25945;&#31243;&#29305;&#28857;">&#26412;&#25945;&#31243;&#29305;&#28857;<a class="anchor-link" href="#&#26412;&#25945;&#31243;&#29305;&#28857;">&#182;</a></h2><p>python的教程很多很多, 有些非常好, 有些非常坑, 我会按照自己的经历参考和重新编排这些教程, 产生这个新的面向眼科医生的python教程.</p>
+<p>本教程中, 会尽量贴近眼科中常见的场景, 编写一些能够在日常工作中可用的代码.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;">&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;<a class="anchor-link" href="#&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;">&#182;</a></h1><p>点击下面这个视频, 先看一段非眼科"成功人士"对为什么要学编程的理解: 
 <a href="https://www.youtube.com/watch?v=Dv7gLpW91DM">Why Programming Is Important?</a></p>
 
@@ -11841,7 +11856,11 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#22899;&#21307;&#29983;&#20063;&#21487;&#20197;&#23398;&#32534;&#31243;&#20040;?">&#22899;&#21307;&#29983;&#20063;&#21487;&#20197;&#23398;&#32534;&#31243;&#20040;?<a class="anchor-link" href="#&#22899;&#21307;&#29983;&#20063;&#21487;&#20197;&#23398;&#32534;&#31243;&#20040;?">&#182;</a></h2>
+<h2 id="&#22899;&#21307;&#29983;&#20063;&#21487;&#20197;&#23398;&#32534;&#31243;&#20040;?">&#22899;&#21307;&#29983;&#20063;&#21487;&#20197;&#23398;&#32534;&#31243;&#20040;?<a class="anchor-link" href="#&#22899;&#21307;&#29983;&#20063;&#21487;&#20197;&#23398;&#32534;&#31243;&#20040;?">&#182;</a></h2><p>最伟大的程序员是女性. 当我们说某个领域最伟大的人时, 唯一没有争议的提法, 就是开创这个领域的人.</p>
+<p>第一位程序员, 是<a href="https://zh.wikipedia.org/zh-cn/%E6%84%9B%E9%81%94%C2%B7%E5%8B%92%E8%8A%99%E8%95%BE%E7%B5%B2">埃达·洛夫莱斯</a></p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Ada_Lovelace_portrait.jpg/334px-Ada_Lovelace_portrait.jpg" alt=""></p>
+<p>同理, 最伟大的眼科医生是<a href="https://zh.wikipedia.org/wiki/%E8%B5%AB%E5%B0%94%E6%9B%BC%C2%B7%E5%86%AF%C2%B7%E4%BA%A5%E5%A7%86%E9%9C%8D%E5%85%B9">赫尔曼·冯·亥姆霍兹</a> 他发明了眼底镜, 此后眼科才独立成为一个学科. 虽然<a href="https://zh.wikipedia.org/wiki/%E9%98%BF%E7%88%BE%E7%93%A6%C2%B7%E5%8F%A4%E7%88%BE%E6%96%AF%E7%89%B9%E8%98%AD%E5%BE%B7">Allvar Gullstrand</a> 发明了裂隙灯而且霸气地干掉了相对论的诺贝尔奖, 但那时候眼科已经独立存在了.</p>
+
 </div>
 </div>
 </div>
@@ -11850,7 +11869,13 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;">&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;<a class="anchor-link" href="#&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;">&#182;</a></h2>
+<h2 id="&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;">&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;<a class="anchor-link" href="#&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;">&#182;</a></h2><p>如何学好和如何学坏是一样的:</p>
+<ul>
+<li>被一些快感所诱惑</li>
+<li>逐步深入, 获得正反馈</li>
+<li>传播</li>
+</ul>
+
 </div>
 </div>
 </div>
