简单设置课程大纲

--- a/lesson_0_of_python_tutorial_for_ophthalmologist.html
+++ b/lesson_0_of_python_tutorial_for_ophthalmologist.html
@@ -11793,7 +11793,14 @@ div#notebook {
 <p>只有教会了其他人, 学习的过程才算是完整的.</p>
 <p>我现在正在学习python, 进一步我还在深入学习"深度学习", 还打算使用python和深度学习技术做很多有意思的东西. 为了自己的学习, 也为了让大家也能体会到这些乐趣, 我开始写这个教程.</p>
 <h2 id="&#26412;&#25945;&#31243;&#29305;&#28857;">&#26412;&#25945;&#31243;&#29305;&#28857;<a class="anchor-link" href="#&#26412;&#25945;&#31243;&#29305;&#28857;">&#182;</a></h2><p>python的教程很多很多, 有些非常好, 有些非常坑, 我会按照自己的经历参考和重新编排这些教程, 产生这个新的面向眼科医生的python教程.</p>
-<p>本教程中, 会尽量贴近眼科中常见的场景, 编写一些能够在日常工作中可用的代码.</p>
+<p>我启动学习python已经很多次, 只有最后这一次坚持下来了. 我深知学习过程中容易放弃的原因, 因此我会在本教程中尽量使眼科医生能够快速上手, 迅速产生实用的效果, 躲开一些python程序员引以为傲的奇技淫巧与晦涩难懂的区域.</p>
+<p>本教程中, 会尽量贴近眼科中常见的场景, 编写一些能够在日常工作中可用的代码. 本教程中会尽快进入科学计算部分, 具体的内容参考后面课程大纲.</p>
+<p>此处面向专业程序员解释, 未学编程的眼科医生不必费心理解:</p>
+<ul>
+<li>我会优先讲解numpy array, 跳过List, set, dict等数据结构, 在迫不得已时才引入;  </li>
+<li>我会优先使用向量化, 在迫不得已时才引入循环; </li>
+<li>我会优先讲解基于Google/ Stack overflow和各种现成工具包的编程, 而不是自己从零开始写代码; </li>
+</ul>
 
 </div>
 </div>
@@ -11803,51 +11810,37 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;">&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;<a class="anchor-link" href="#&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;">&#182;</a></h1><p>点击下面这个视频, 先看一段非眼科"成功人士"对为什么要学编程的理解: 
-<a href="https://www.youtube.com/watch?v=Dv7gLpW91DM">Why Programming Is Important?</a></p>
+<h1 id="&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;">&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;<a class="anchor-link" href="#&#20026;&#20160;&#20040;&#35201;&#23398;&#32534;&#31243;">&#182;</a></h1><p>点击下面这个视频, 先看一段非眼科"成功人士"对为什么要学编程的理解:</p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=Dv7gLpW91DM">Why Programming Is Important? Youtube视频</a></li>
+<li><a href="https://www.bilibili.com/video/av3309976/?from=search&amp;seid=5681543930122161574">Why Programming Is Important? BiliBili视频</a></li>
+</ul>
+<p>每个人的动机可能会有不同. 我不知道你第一次拿起手术刀, 第一次坐在显微镜之前, 第一次听见Phaco机的鸣唱, 第一次独立完成一个手术是什么感觉. 我第一次学习编程的时候, 会有类似的感觉.</p>
+<p>我记得我是初一才开始学习编程, 写的第一个程序是计算从1+2+3... 99+100, 常年参加数学竞赛的我当然知道$\frac{(1+100)\times 100 }{2}=5050 $, 但是看到计算机若无其事地从1加到了100, 并且返回了5050的结果以后. 我意识到我所能达到的边界被极大扩展了, 原本必须使用复杂技巧绕过的障碍, 突然之间不复存在.</p>
+<p>这种震撼的感觉在我少年时期出现过三次: 第一次接触到解方程, 第一次编写程序和第一次理解进化论是一种算法.</p>
 
 </div>
 </div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">IPython.display</span> <span class="k">import</span> <span class="n">HTML</span>
-
-<span class="c1"># Youtube</span>
-<span class="n">HTML</span><span class="p">(</span><span class="s1">&#39;&lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/Dv7gLpW91DM&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;&#39;</span><span class="p">)</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area">
-<div class="prompt output_prompt">Out[2]:</div>
-
-
-<div class="output_html rendered_html output_subarea output_execute_result">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Dv7gLpW91DM" frameborder="0" allowfullscreen></iframe>
-</div>
-
-</div>
-
-</div>
-</div>
-
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="&#20026;&#20160;&#20040;&#30524;&#31185;&#21307;&#29983;&#35201;&#23398;&#20064;&#32534;&#31243;">&#20026;&#20160;&#20040;&#30524;&#31185;&#21307;&#29983;&#35201;&#23398;&#20064;&#32534;&#31243;<a class="anchor-link" href="#&#20026;&#20160;&#20040;&#30524;&#31185;&#21307;&#29983;&#35201;&#23398;&#20064;&#32534;&#31243;">&#182;</a></h2><h3 id="&#20154;&#24037;&#26234;&#33021;&#26102;&#20195;&#19982;&#30524;&#31185;">&#20154;&#24037;&#26234;&#33021;&#26102;&#20195;&#19982;&#30524;&#31185;<a class="anchor-link" href="#&#20154;&#24037;&#26234;&#33021;&#26102;&#20195;&#19982;&#30524;&#31185;">&#182;</a></h3>
+<h2 id="&#20026;&#20160;&#20040;&#30524;&#31185;&#21307;&#29983;&#35201;&#23398;&#20064;&#32534;&#31243;">&#20026;&#20160;&#20040;&#30524;&#31185;&#21307;&#29983;&#35201;&#23398;&#20064;&#32534;&#31243;<a class="anchor-link" href="#&#20026;&#20160;&#20040;&#30524;&#31185;&#21307;&#29983;&#35201;&#23398;&#20064;&#32534;&#31243;">&#182;</a></h2><p>就像我在其他很多文章中所写的. 如果你想在眼科作出什么成就, 你会发现所需要的知识一定不在眼科书上. 
+. . .</p>
+<h3 id="&#36718;&#23376;&#20026;&#20160;&#20040;&#27809;&#26377;&#22312;&#36718;&#23376;&#34987;&#21457;&#26126;&#20043;&#21069;&#34987;&#21457;&#26126;">&#36718;&#23376;&#20026;&#20160;&#20040;&#27809;&#26377;&#22312;&#36718;&#23376;&#34987;&#21457;&#26126;&#20043;&#21069;&#34987;&#21457;&#26126;<a class="anchor-link" href="#&#36718;&#23376;&#20026;&#20160;&#20040;&#27809;&#26377;&#22312;&#36718;&#23376;&#34987;&#21457;&#26126;&#20043;&#21069;&#34987;&#21457;&#26126;">&#182;</a></h3><h3 id="&#30524;&#31185;&#38656;&#35201;&#22788;&#29702;&#30340;&#25968;&#25454;&#26356;&#22797;&#26434;">&#30524;&#31185;&#38656;&#35201;&#22788;&#29702;&#30340;&#25968;&#25454;&#26356;&#22797;&#26434;<a class="anchor-link" href="#&#30524;&#31185;&#38656;&#35201;&#22788;&#29702;&#30340;&#25968;&#25454;&#26356;&#22797;&#26434;">&#182;</a></h3><h3 id="&#28145;&#24230;&#23398;&#20064;&#19982;&#30524;&#31185;">&#28145;&#24230;&#23398;&#20064;&#19982;&#30524;&#31185;<a class="anchor-link" href="#&#28145;&#24230;&#23398;&#20064;&#19982;&#30524;&#31185;">&#182;</a></h3>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="&#25105;&#24050;&#32463;&#19981;&#26159;&#23398;&#29983;&#20102;&#36824;&#23398;&#21861;">&#25105;&#24050;&#32463;&#19981;&#26159;&#23398;&#29983;&#20102;&#36824;&#23398;&#21861;<a class="anchor-link" href="#&#25105;&#24050;&#32463;&#19981;&#26159;&#23398;&#29983;&#20102;&#36824;&#23398;&#21861;">&#182;</a></h2><p>也许你已经是主治/副主任/主任医师了.</p>
+<p>眼科医生一直是多才多艺的. 我记得我刚进眼科的时候, 发现老教授用五笔字型打字比我输入快得多, 我刚开始在网上学公开课的时候, 老教授已经在研究Coursera并且推动眼科MOOC了.</p>
+
 </div>
 </div>
 </div>
@@ -11860,6 +11853,9 @@ div#notebook {
 <p>第一位程序员, 是<a href="https://zh.wikipedia.org/zh-cn/%E6%84%9B%E9%81%94%C2%B7%E5%8B%92%E8%8A%99%E8%95%BE%E7%B5%B2">埃达·洛夫莱斯</a></p>
 <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Ada_Lovelace_portrait.jpg/334px-Ada_Lovelace_portrait.jpg" alt=""></p>
 <p>同理, 最伟大的眼科医生是<a href="https://zh.wikipedia.org/wiki/%E8%B5%AB%E5%B0%94%E6%9B%BC%C2%B7%E5%86%AF%C2%B7%E4%BA%A5%E5%A7%86%E9%9C%8D%E5%85%B9">赫尔曼·冯·亥姆霍兹</a> 他发明了眼底镜, 此后眼科才独立成为一个学科. 虽然<a href="https://zh.wikipedia.org/wiki/%E9%98%BF%E7%88%BE%E7%93%A6%C2%B7%E5%8F%A4%E7%88%BE%E6%96%AF%E7%89%B9%E8%98%AD%E5%BE%B7">Allvar Gullstrand</a> 发明了裂隙灯而且霸气地干掉了相对论的诺贝尔奖, 但那时候眼科已经独立存在了.</p>
+<p>在"电子计算机"出现之前, computer是指计算员, 这是人类的一种工作, 而且, 大部分computer是女性. <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Human_computers_-_Dryden.jpg" alt="human computer"></p>
+<p><strong>一个人是不应该<a href="http://www.guokr.com/blog/310237/">被简单的词汇所限定住</a>, 你做什么或者不做什么, 只有自己才能决定. </strong></p>
+<p>何况学习编程只需要一台电脑甚至手机就可以了. 不试试么?</p>
 
 </div>
 </div>
@@ -11872,8 +11868,8 @@ div#notebook {
 <h2 id="&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;">&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;<a class="anchor-link" href="#&#25105;&#24212;&#35813;&#22914;&#20309;&#23398;&#20064;&#32534;&#31243;">&#182;</a></h2><p>如何学好和如何学坏是一样的:</p>
 <ul>
 <li>被一些快感所诱惑</li>
-<li>逐步深入, 获得正反馈</li>
-<li>传播</li>
+<li>快速上手, 逐步深入, 获得快感的正反馈</li>
+<li>传播, 让周围的人一起</li>
 </ul>
 
 </div>
@@ -11894,6 +11890,34 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="&#22914;&#20309;&#24320;&#22987;">&#22914;&#20309;&#24320;&#22987;<a class="anchor-link" href="#&#22914;&#20309;&#24320;&#22987;">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="&#35838;&#31243;&#22823;&#32434;">&#35838;&#31243;&#22823;&#32434;<a class="anchor-link" href="#&#35838;&#31243;&#22823;&#32434;">&#182;</a></h1><h2 id="&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK&#20844;&#24335;&#35745;&#31639;&#22120;">&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK&#20844;&#24335;&#35745;&#31639;&#22120;<a class="anchor-link" href="#&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK&#20844;&#24335;&#35745;&#31639;&#22120;">&#182;</a></h2><ul>
+<li>熟悉Jupyter环境</li>
+<li>熟悉交互式编程</li>
+<li>理解变量赋值</li>
+<li>函数定义</li>
+</ul>
+<h2 id="&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK-II&#20844;&#24335;&#35745;&#31639;&#22120;">&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK II&#20844;&#24335;&#35745;&#31639;&#22120;<a class="anchor-link" href="#&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK-II&#20844;&#24335;&#35745;&#31639;&#22120;">&#182;</a></h2><ul>
+<li>分支结构</li>
+</ul>
+<h2 id="&#25311;&#21512;&#33258;&#24049;&#30340;IOL&#20844;&#24335;">&#25311;&#21512;&#33258;&#24049;&#30340;IOL&#20844;&#24335;<a class="anchor-link" href="#&#25311;&#21512;&#33258;&#24049;&#30340;IOL&#20844;&#24335;">&#182;</a></h2><ul>
+<li>导入numpy</li>
+<li>numpy array</li>
+<li>读写excel数据</li>
+<li>循环与List</li>
+<li>tensorflow初步</li>
+</ul>
+<h2 id="EDTRs&#35270;&#21147;&#34920;">EDTRs&#35270;&#21147;&#34920;<a class="anchor-link" href="#EDTRs&#35270;&#21147;&#34920;">&#182;</a></h2><ul>
+<li>图像处理与OpenCV初步</li>
+</ul>
+
 </div>
 </div>
 </div>
