lesson2 typo fixed

--- a/lesson_00_motivation.html
+++ b/lesson_00_motivation.html
@@ -11909,6 +11909,7 @@ div#notebook {
 <h1 id="&#35838;&#31243;&#22823;&#32434;">&#35838;&#31243;&#22823;&#32434;<a class="anchor-link" href="#&#35838;&#31243;&#22823;&#32434;">&#182;</a></h1><h2 id="Jupyter&#29615;&#22659;&#30340;&#20351;&#29992;">Jupyter&#29615;&#22659;&#30340;&#20351;&#29992;<a class="anchor-link" href="#Jupyter&#29615;&#22659;&#30340;&#20351;&#29992;">&#182;</a></h2><ul>
 <li>熟悉CoCalc</li>
 <li>熟悉文学式编程</li>
+<li>git初步</li>
 </ul>
 <h2 id="&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK&#20844;&#24335;&#35745;&#31639;&#22120;">&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK&#20844;&#24335;&#35745;&#31639;&#22120;<a class="anchor-link" href="#&#35745;&#31639;IOL&#24230;&#25968;&#30340;SRK&#20844;&#24335;&#35745;&#31639;&#22120;">&#182;</a></h2><ul>
 <li>理解变量赋值</li>
