--- a/lesson_01_jupyter.html
+++ b/lesson_01_jupyter.html
@@ -11791,9 +11791,22 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="&#29256;&#26412;&#31649;&#29702;">&#29256;&#26412;&#31649;&#29702;<a class="anchor-link" href="#&#29256;&#26412;&#31649;&#29702;">&#182;</a></h1><h2 id="github">github<a class="anchor-link" href="#github">&#182;</a></h2><h2 id="git-add.">git add.<a class="anchor-link" href="#git-add.">&#182;</a></h2>
+<h1 id="&#29256;&#26412;&#31649;&#29702;">&#29256;&#26412;&#31649;&#29702;<a class="anchor-link" href="#&#29256;&#26412;&#31649;&#29702;">&#182;</a></h1><h2 id="github">github<a class="anchor-link" href="#github">&#182;</a></h2><h2 id="git&#24120;&#29992;&#21629;&#20196;">git&#24120;&#29992;&#21629;&#20196;<a class="anchor-link" href="#git&#24120;&#29992;&#21629;&#20196;">&#182;</a></h2>
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
 </div>
     </div>
   </div>
