--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-<title>Untitled</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>index</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <style type="text/css">
@@ -11773,6 +11773,88 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="&#38754;&#21521;&#30524;&#31185;&#21307;&#29983;&#30340;Python&#25945;&#31243;">&#38754;&#21521;&#30524;&#31185;&#21307;&#29983;&#30340;Python&#25945;&#31243;<a class="anchor-link" href="#&#38754;&#21521;&#30524;&#31185;&#21307;&#29983;&#30340;Python&#25945;&#31243;">&#182;</a></h1><h1 id="&#24207;&#35328;">&#24207;&#35328;<a class="anchor-link" href="#&#24207;&#35328;">&#182;</a></h1><p>本教程是面向眼科医生的python语言教程。python语言很简单, 难在开始学习和坚持学习前三个月。</p>
+<p>人之为学有难易乎? 靡不有初鲜克有终。</p>
+<p>编程是一种技能，学习编程和做手术一样，需要由易到难，勤于练习。不要寄希望于看一遍教程或者书籍就掌握写python的技巧，也不必强求自己一开始就写出华丽复杂的程序。</p>
+<p>本教程以眼科临床工作和科研中常见的场景循序渐进进行教学，并且在每一部分都有练习作业。请在阅读过程中随时停下来，自己输入代码试一试。多多练习才能体会到编程的乐趣。</p>
+<p>测试代码和完成作业推荐使用cocalc.com (<a href="http://cocalc.com/)这个在线编程环境。您可以将本教程中的ipython文件上传到自己的cocalc项目内，在其中修改代码并运行。">http://cocalc.com/)这个在线编程环境。您可以将本教程中的ipython文件上传到自己的cocalc项目内，在其中修改代码并运行。</a></p>
+<p>当您对python足够熟悉以后再过渡到本地安装python。不要急于求成，就像应该先以翼状胬肉手术练习好显微镜使用，然后才开始phaco或玻切手术的训练。</p>
+<p>本教程只是一个初级的入门教程，以科学计算部分为主。在您今后的学习工作中可能还需要编写收集数据的网络爬虫、深度神经网络、甚至手机app，这些内容请参考网上其他教程。</p>
+<h1 id="&#20351;&#29992;">&#20351;&#29992;<a class="anchor-link" href="#&#20351;&#29992;">&#182;</a></h1><p>您可以点击 .ipynb 文件, 在线阅读本教程内容.</p>
+<p><img src="https://i.loli.net/2017/09/28/59cd07ccaf950.png" alt="clickipynb"></p>
+<p>也可以点击 clone or download, 将本教程下载到电脑上阅读.</p>
+<p><img src="https://i.loli.net/2017/09/28/59cd07b75acca.png" alt="clickdownload"></p>
+<p>下载到电脑上阅读时, 您可以打开 .html文件阅读.</p>
+<h1 id="CoCalc">CoCalc<a class="anchor-link" href="#CoCalc">&#182;</a></h1><p><a href="https://cocalc.com/">Cocalc.com</a>是一个非常优秀的在线科学计算工具集, 其中已经包含了python, 以及几乎所有科学计算所需要的python工具包.</p>
+<p>注册cocalc是免费的, 就初学者而言, 暂时还不需要购买其中的付费升级. 主要区别是远程主机联网的能力和运行稳定性. 当您已经达到一定水平后, 比如需要使用编写网页爬虫采集数据, 可以考虑购买升级. 目前本教程使用免费版足以.</p>
+<p>您可以将下载下来的本教程文件upload到cocalc中, 就可以直接运行 .ipynb 文件, 并且修改其中的作业练习代码, 完成练习.</p>
+<p>关于coclac的使用, 本教程中将有介绍.</p>
+<h1 id="&#21442;&#32771;">&#21442;&#32771;<a class="anchor-link" href="#&#21442;&#32771;">&#182;</a></h1><ul>
+<li><p>任何时候, Google都是您的良师益友. 凡是有确定答案的问题, 通常都可以通过Google搜索到. 至于如何能够访问Google, 已经不在本教程范围内讨论.</p>
+</li>
+<li><p><a href="https://stackoverflow.com/questions/tagged/python">stackoverflow</a> 是一个编程提问网站, 多数情况下, 您遇到的问题在里面已经有所解答.</p>
+</li>
+<li><p><a href="https://morvanzhou.github.io/tutorials/python-basic/">莫烦PYTHON教程</a> 是很好的视频教程, 有时候文字解释不如视频来得清晰明了.</p>
+</li>
+<li><p><a href="https://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000">廖雪峰Python教程</a> 也是不错的教程, 但我推荐将其作为速查手册, 需要了解python的某个细节时去查阅其中的文字说明. 我是不推荐按照他的教程在本地装python开始学的.</p>
+</li>
+<li><p><a href="https://www.sololearn.com/Course/Python/">Sololearn</a> Sololearn是个教程APP, 有android/iOS和网页版, 里面也是循序渐进的讲解了python的各个方面. 而且有实时的练习, 利用碎片时间也可以学得很好, 非常推荐.</p>
+</li>
+</ul>
+<p>综上,  我推荐您:</p>
+<ol>
+<li>在手机上安装Sololearn, 利用碎片时间入门python;</li>
+<li>注册使用<a href="https://coclac.com/app">CoCalc</a> 在线阅读本教程并做与眼科相关的练习作业.</li>
+<li>逐渐开始您自己的python项目, 遇到问题时查询<a href="https://www.liaoxuefeng.com/wiki/0014316089557264a6b348958f449949df42a6d3a2e542c000">廖雪峰Python文字教程</a>, 看<a href="https://morvanzhou.github.io/tutorials/python-basic/">莫烦PYTHON视频教程</a> , 并请教Google/ <a href="https://stackoverflow.com/questions/tagged/python">stackoverflow</a></li>
+</ol>
+<h1 id="&#23398;&#32780;&#26102;&#20064;&#20043;&#19981;&#20134;&#35828;&#20046;">&#23398;&#32780;&#26102;&#20064;&#20043;&#19981;&#20134;&#35828;&#20046;<a class="anchor-link" href="#&#23398;&#32780;&#26102;&#20064;&#20043;&#19981;&#20134;&#35828;&#20046;">&#182;</a></h1><p>祝学习愉快</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="&#30446;&#24405;">&#30446;&#24405;<a class="anchor-link" href="#&#30446;&#24405;">&#182;</a></h1><ul>
+<li><a href="./lesson_00_motivation.html">第 0 课, 动机</a></li>
+<li><a href="./lesson_01_jupyter.html">第 1 课, CoCalc</a></li>
+<li><a href="./lesson_02_SRK.html">第 2 课, SRK公式</a><ul>
+<li><a href="./lesson_02_SRK.ipynb">第 2 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_03_SRKII.html">第 3 课, SRK-II公式</a><ul>
+<li><a href="./lesson_03_SRKII.ipynb">第 3 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_04_1001patients.html">第 4 课, 一千零一个病人</a><ul>
+<li><a href="./lesson_04_1001patients.ipynb">第 4 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
     </div>
   </div>
 </body>
