--- a/lesson_00_motivation.html
+++ b/lesson_00_motivation.html
@@ -11932,6 +11932,34 @@ div#notebook {
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="&#30446;&#24405;">&#30446;&#24405;<a class="anchor-link" href="#&#30446;&#24405;">&#182;</a></h1><ul>
+<li><a href="./lesson_00_motivation.html">第 0 课, 动机</a></li>
+<li><a href="./lesson_01_jupyter.html">第 1 课, CoCalc</a></li>
+<li><a href="./lesson_02_SRK.html">第 2 课, SRK公式</a><ul>
+<li><a href="./lesson_02_SRK.ipynb">第 2 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_03_SRKII.html">第 3 课, SRK-II公式</a><ul>
+<li><a href="./lesson_03_SRKII.ipynb">第 3 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_04_1001patients.html">第 4 课, 一千零一个病人</a><ul>
+<li><a href="./lesson_04_1001patients.ipynb">第 4 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_05_pandas.html">第 5 课, save 和 load</a><ul>
+<li><a href="./lesson_05_pandas.ipynb">第 5 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+</ul>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
