--- a/lesson_05_pandas.html
+++ b/lesson_05_pandas.html
@@ -11800,7 +11800,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[27]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
@@ -11855,7 +11855,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[28]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">filenames</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;IOLdata00.xlsx&#39;</span><span class="p">,</span><span class="s1">&#39;IOLdata01.xlsx&#39;</span><span class="p">]</span>
@@ -11900,7 +11900,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[29]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">pathname</span><span class="p">,</span><span class="n">filenames</span><span class="p">)</span>
@@ -11923,7 +11923,7 @@ IOLdata01.xlsx
 <pre>
 <span class="ansi-red-fg">---------------------------------------------------------------------------</span>
 <span class="ansi-red-fg">TypeError</span>                                 Traceback (most recent call last)
-<span class="ansi-green-fg">&lt;ipython-input-6-ecdbda71648b&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span><span class="ansi-blue-fg">()</span>
+<span class="ansi-green-fg">&lt;ipython-input-29-ecdbda71648b&gt;</span> in <span class="ansi-cyan-fg">&lt;module&gt;</span><span class="ansi-blue-fg">()</span>
 <span class="ansi-green-fg">----&gt; 1</span><span class="ansi-red-fg"> </span>os<span class="ansi-blue-fg">.</span>path<span class="ansi-blue-fg">.</span>join<span class="ansi-blue-fg">(</span>pathname<span class="ansi-blue-fg">,</span>filenames<span class="ansi-blue-fg">)</span>
 
 <span class="ansi-green-fg">~/anaconda3/envs/opencvenv/lib/python3.5/posixpath.py</span> in <span class="ansi-cyan-fg">join</span><span class="ansi-blue-fg">(a, *p)</span>
@@ -11968,7 +11968,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[30]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">filename_list</span><span class="o">=</span><span class="p">[]</span>
@@ -12039,7 +12039,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[8]:</div>
+<div class="prompt input_prompt">In&nbsp;[31]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
@@ -12074,7 +12074,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[32]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># 我更喜欢这样的方式, 运算速度上会有一点差别, 但这个加法太简单, 不明显</span>
@@ -12129,7 +12129,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[33]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">f_list</span><span class="o">=</span><span class="p">[</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">pathname</span><span class="p">,</span><span class="n">f</span><span class="p">)</span> <span class="k">for</span> <span class="n">f</span> <span class="ow">in</span> <span class="n">filenames</span><span class="p">]</span>
@@ -12181,7 +12181,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[11]:</div>
+<div class="prompt input_prompt">In&nbsp;[34]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span> 
@@ -12212,7 +12212,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="prompt input_prompt">In&nbsp;[35]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">testdata</span><span class="o">=</span><span class="n">pd</span><span class="o">.</span><span class="n">read_excel</span><span class="p">(</span><span class="n">f_list</span><span class="p">[</span><span class="mi">1</span><span class="p">])</span>
@@ -12263,7 +12263,7 @@ IOLdata01.xlsx
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[13]:</div>
+<div class="prompt input_prompt">In&nbsp;[36]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="n">testdata</span><span class="o">.</span><span class="n">AL</span><span class="p">)</span>
@@ -12315,7 +12315,7 @@ Name: AL, dtype: float64
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="prompt input_prompt">In&nbsp;[37]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">IOLdata_list</span><span class="o">=</span><span class="p">[</span><span class="n">pd</span><span class="o">.</span><span class="n">read_excel</span><span class="p">(</span><span class="n">f</span><span class="p">)</span> <span class="k">for</span> <span class="n">f</span> <span class="ow">in</span> <span class="n">f_list</span><span class="p">]</span>
@@ -12337,7 +12337,7 @@ Name: AL, dtype: float64
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="prompt input_prompt">In&nbsp;[38]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">IOLdata</span><span class="o">=</span><span class="n">pd</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">IOLdata_list</span><span class="p">,</span><span class="n">ignore_index</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span> <span class="c1"># 这里可以试试把True改成False</span>
@@ -12382,10 +12382,13 @@ Name: AL, dtype: float64
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="prompt input_prompt">In&nbsp;[39]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">on_L_change_A</span><span class="p">(</span><span class="n">L</span><span class="p">,</span><span class="n">A</span><span class="p">,</span><span class="n">Lmin</span><span class="p">,</span><span class="n">Lmax</span><span class="p">,</span><span class="n">deltaA</span><span class="p">):</span>
+    <span class="c1">#A=np.asarray(A).copy()</span>
+    <span class="c1">#L=np.asarray(L).copy()</span>
+    <span class="k">assert</span> <span class="n">A</span><span class="o">.</span><span class="n">shape</span><span class="p">()</span><span class="o">==</span><span class="n">L</span><span class="o">.</span><span class="n">shape</span><span class="p">()</span>
     <span class="n">pickout</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">logical_and</span><span class="p">(</span><span class="n">L</span><span class="o">&gt;</span><span class="n">Lmin</span><span class="p">,</span> <span class="n">L</span><span class="o">&lt;=</span><span class="n">Lmax</span><span class="p">)</span>
     <span class="n">A</span><span class="p">[</span><span class="n">pickout</span><span class="p">]</span> <span class="o">+=</span> <span class="n">deltaA</span>
     <span class="k">return</span> <span class="n">A</span>
@@ -12422,7 +12425,7 @@ Name: AL, dtype: float64
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="prompt input_prompt">In&nbsp;[40]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">IOLpower</span><span class="o">=</span><span class="n">SRK_2</span><span class="p">(</span><span class="n">IOLdata</span><span class="o">.</span><span class="n">A</span><span class="p">,</span> <span class="n">IOLdata</span><span class="o">.</span><span class="n">K1</span><span class="p">,</span><span class="n">IOLdata</span><span class="o">.</span><span class="n">K2</span><span class="p">,</span><span class="n">IOLdata</span><span class="o">.</span><span class="n">AL</span><span class="p">)</span>
@@ -12470,7 +12473,7 @@ dtype: float64
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[18]:</div>
+<div class="prompt input_prompt">In&nbsp;[41]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">newIOLdata</span><span class="o">=</span><span class="n">IOLdata</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">IOLpower</span><span class="p">)</span>
@@ -12599,6 +12602,47 @@ dtype: float64
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="&#30446;&#24405;">&#30446;&#24405;<a class="anchor-link" href="#&#30446;&#24405;">&#182;</a></h1><ul>
+<li><a href="./lesson_00_motivation.html">第 0 课, 动机</a></li>
+<li><a href="./lesson_01_jupyter.html">第 1 课, CoCalc</a></li>
+<li><a href="./lesson_02_SRK.html">第 2 课, SRK公式</a><ul>
+<li><a href="./lesson_02_SRK.ipynb">第 2 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_03_SRKII.html">第 3 课, SRK-II公式</a><ul>
+<li><a href="./lesson_03_SRKII.ipynb">第 3 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_04_1001patients.html">第 4 课, 一千零一个病人</a><ul>
+<li><a href="./lesson_04_1001patients.ipynb">第 4 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+<li><a href="./lesson_05_pandas.html">第 5 课, save 和 load</a><ul>
+<li><a href="./lesson_05_pandas.ipynb">第 5 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+</div>
+</div>
+</div>
+
 </div>
     </div>
   </div>
