--- a/index.html
+++ b/index.html
@@ -11844,6 +11844,10 @@ div#notebook {
 <li><a href="./lesson_05_pandas.ipynb">第 5 课, jupyter笔记本下载</a></li>
 </ul>
 </li>
+<li><a href="./lesson_06_pymc3-bayes.html">第 6 课, 统计分析</a><ul>
+<li><a href="./lesson_06_pymc3-bayes.ipynb">第 6 课, jupyter笔记本下载</a></li>
+</ul>
+</li>
 </ul>
 
 </div>
